--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-# Core dependencies
-pandas>=2.0.0
-scikit-learn>=1.5.0
-joblib>=1.4.0
-
-# Optional (for exploration & visualization in Jupyter)
-notebook>=7.0.0
-matplotlib>=3.8.0
-seaborn>=0.13.0
+pandas
+scikit-learn
+joblib
